add list swagger docs
