# package/handler/list.go
@@ -7,6 +7,19 @@ import (
 	"strconv"
 )
 
+// @Summary Create todo list
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description create todo list
+// @ID create-list
+// @Accept  json
+// @Produce  json
+// @Param input body todo.TodoList true "list info"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists [post]
 func (h *Handler) createList(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -30,6 +43,18 @@ type getAllListResponce struct {
 	Data []todo.TodoList `json:"data"`
 }
 
+// @Summary Get All todo list
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description get all todo list
+// @ID get-all-lists
+// @Accept  json
+// @Produce  json
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists [get]
 func (h *Handler) getAllLists(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -43,6 +68,20 @@ func (h *Handler) getAllLists(c *gin.Context) {
 		Data: lists,
 	})
 }
+
+// @Summary Get todo list by id
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description get todo list
+// @ID get-list-by-id
+// @Accept  json
+// @Produce  json
+// @Param        id   path      int  true  "List ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id} [get]
 func (h *Handler) getListById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -59,6 +98,21 @@ func (h *Handler) getListById(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, list)
 }
+
+// @Summary Update todo list
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description update todo list
+// @ID update-list
+// @Accept  json
+// @Produce  json
+// @Param input body todo.UpdateListInput true "list info"
+// @Param        id   path      int  true  "List ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id} [put]
 func (h *Handler) updateList(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -69,18 +123,31 @@ func (h *Handler) updateList(c *gin.Context) {
 		newErrorResponce(c, http.StatusInternalServerError, err.Error())
 		return
 	}
-	var input todo.UpdateItemInput
+	var input todo.UpdateListInput
 	if err := c.BindJSON(&input); err != nil {
 		newErrorResponce(c, http.StatusBadRequest, err.Error())
 		return
 	}
-	if err = h.services.TodoItem.Update(userId, id, input); err != nil {
+	if err = h.services.TodoList.Update(userId, id, input); err != nil {
 		newErrorResponce(c, http.StatusInternalServerError, err.Error())
 		return
 	}
 	c.JSON(http.StatusOK, StatusResponce{Statuc: "ok"})
 }
 
+// @Summary Delete todo list by id
+// @Security ApiKeyAuth
+// @Tags lists
+// @Description delete todo list
+// @ID delete-list-by-id
+// @Accept  json
+// @Produce  json
+// @Param        id   path      int  true  "List ID"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/{id} [delete]
 func (h *Handler) deleteList(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
